PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/ExpenseDetail__c.object-meta.xml
<CustomObject>
    <label>Expense Detail</label>
    <nameField>
        <displayFormat>EPD-{000000}</displayFormat>
        <label>경비신청 상세 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>