PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Approval_True__c.field-meta.xml
<CustomField>
    <fullName>Approval_True__c</fullName>
    <formula>IF(ISPICKVAL(Expense__r.ApprovalStatus__c ,&apos;Approved&apos;), True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>승인여부</label>
    <type>Checkbox</type>
</CustomField>