PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingAmount__c</fullName>
    <label>결제금액</label>
    <length>225</length>
    <type>Text</type>
</CustomField>