PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/BudgetDetail_Id__c.field-meta.xml
<CustomField>
    <fullName>BudgetDetail_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>보고서용</description>
    <label>프로젝트 비용 예산 상세(보고서용)</label>
    <referenceTo>ProjectBudgetDetail__c</referenceTo>
    <relationshipLabel>Expense Detail</relationshipLabel>
    <relationshipName>Expense_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>