PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>업종</label>
    <length>225</length>
    <type>Text</type>
</CustomField>