PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/CardCompany__c.field-meta.xml
<CustomField>
    <fullName>CardCompany__c</fullName>
    <label>카드사</label>
    <length>225</length>
    <type>Text</type>
</CustomField>