PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <label>사용목적</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category1</valueSetName>
    </valueSet>
</CustomField>