PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Category21__c.field-meta.xml
<CustomField>
    <fullName>Category21__c</fullName>
    <label>예산 구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category2</valueSetName>
    </valueSet>
</CustomField>