PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/CorporateCardBilling__c.field-meta.xml
<CustomField>
    <fullName>CorporateCardBilling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>법인카드청구내역</label>
    <referenceTo>CorporateCardBilling__c</referenceTo>
    <relationshipLabel>Expense Detail</relationshipLabel>
    <relationshipName>CorporateCardBilling</relationshipName>
    <type>Lookup</type>
</CustomField>