PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>사용일시</label>
    <type>DateTime</type>
</CustomField>