PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>내용</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>