PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>경비신청 ID</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipName>ExpenseDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>