PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_approvalStatus__c.field-meta.xml
<CustomField>
    <fullName>fm_approvalStatus__c</fullName>
    <formula>TEXT(Expense__r.ApprovalStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>승인상태</label>
    <type>Text</type>
</CustomField>