PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_BillingDate__c.field-meta.xml
<CustomField>
    <fullName>fm_BillingDate__c</fullName>
    <formula>CorporateCardBilling__r.BillingDate__c</formula>
    <label>결제일시</label>
    <type>DateTime</type>
</CustomField>