PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_CardNickname__c.field-meta.xml
<CustomField>
    <fullName>fm_CardNickname__c</fullName>
    <formula>CorporateCardBilling__r.fm_CardNickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>해당 청구내역의 법인카드의 카드별칭 정보</inlineHelpText>
    <label>카드별칭</label>
    <type>Text</type>
</CustomField>