PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_CardNumber__c.field-meta.xml
<CustomField>
    <fullName>fm_CardNumber__c</fullName>
    <formula>CorporateCardBilling__r.fm_CardNumber__c</formula>
    <inlineHelpText>해당 청구내역의 법인카드의 카드번호 정보</inlineHelpText>
    <label>카드번호</label>
    <type>Text</type>
</CustomField>