PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_Expense__c.field-meta.xml
<CustomField>
    <fullName>fm_Expense__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>경비신청금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>