PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_IsFinishied__c.field-meta.xml
<CustomField>
    <fullName>fm_IsFinishied__c</fullName>
    <formula>Project_Name__r.Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>프로젝트 완료여부(보고서용)</label>
    <type>Checkbox</type>
</CustomField>