PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_PrjBudget__c.field-meta.xml
<CustomField>
    <fullName>fm_PrjBudget__c</fullName>
    <formula>BudgetDetail_Id__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>비용예산금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>