PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_Project__c.field-meta.xml
<CustomField>
    <fullName>fm_Project__c</fullName>
    <formula>Expense__r.Project__r.Name</formula>
    <label>프로젝트</label>
    <type>Text</type>
</CustomField>