PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_ProjectOppty__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectOppty__c</fullName>
    <formula>IF(ISPICKVAL(Category1__c, &quot;프로젝트&quot;)
				,  Project_Name__r.Name 
				, IF(ISPICKVAL(Category1__c, &quot;영업&quot;)
									, Opportunity_Name__r.Name
									, TEXT(Category1__c)
				  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>프로젝트(보고서)</label>
    <type>Text</type>
</CustomField>