PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/fm_StartDate__c.field-meta.xml
<CustomField>
    <fullName>fm_StartDate__c</fullName>
    <description>보고서용으로 해당 레코드의 프로젝트의 착수일자 값을 가져옴</description>
    <formula>Project_Name__r.StartDate__c</formula>
    <label>착수 일자 (보고서용)</label>
    <type>Date</type>
</CustomField>