PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>잠재고객</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Expense Detail</relationshipLabel>
    <relationshipName>Expense_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>