PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>영업 관련 비용은 해당 영업기회를 선택하세요.</inlineHelpText>
    <label>영업기회</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>ExpenseDetail_Oppty</relationshipName>
    <type>Lookup</type>
</CustomField>