PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>지출구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>개인카드</fullName>
            </value>
            <value>
                <fullName>법인카드</fullName>
            </value>
            <value>
                <fullName>현금</fullName>
            </value>
            <value>
                <fullName>세금계산서</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>