PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/ProjectBudget__c.field-meta.xml
<CustomField>
    <fullName>ProjectBudget__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>프로젝트 예산</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>