PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>영업구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>잠재고객</fullName>
            </value>
            <value>
                <fullName>영업기회</fullName>
            </value>
            <value>
                <fullName>프로젝트</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>