PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/StoreAddress__c.field-meta.xml
<CustomField>
    <fullName>StoreAddress__c</fullName>
    <label>소재지</label>
    <length>225</length>
    <type>Text</type>
</CustomField>