PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>가맹점명</label>
    <length>225</length>
    <type>Text</type>
</CustomField>