PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>필요 시 회계 담당자가 수정.</inlineHelpText>
    <label>계정구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseType</valueSetName>
    </valueSet>
</CustomField>