PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/recordTypes/RT_ExpenseDetail_Default.recordType-meta.xml
<RecordType>
    <fullName>RT_ExpenseDetail_Default</fullName>
    <active>true</active>
    <label>기본</label>
</RecordType>