PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/validationRules/NoSaveAfterThisMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>NoSaveAfterThisMonth</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
YEAR(Today()) = YEAR(Date__c),
MONTH(Date__c) &gt; Month(Today()
))</errorConditionFormula>
    <errorMessage>해당 월은 경비 신청 대상 일자가 아닙니다.</errorMessage>
</ValidationRule>