PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/validationRules/NoSaveSameMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>NoSaveSameMonth</fullName>
    <active>false</active>
    <errorConditionFormula>Month(Date__c) &lt;&gt; VALUE(TEXT(Expense__r.UseMonth__c))</errorConditionFormula>
    <errorMessage>경비 사용 월과 사용 일자의 월은 동일해야합니다.</errorMessage>
</ValidationRule>