PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/validationRules/OnlySaveThisMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlySaveThisMonth</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(
Year(Date__c) != Year(Today()),
Month(Date__c) = 11,
Month(Today()) = 1), True,
IF(
Month(Date__c) &lt; Month(Today()) -1,TRUE,FALSE))</errorConditionFormula>
    <errorMessage>이전 월은 선택할 수 없습니다.</errorMessage>
</ValidationRule>