PA_Education/TestMenifest/force-app/main/default/objects/ExpenseDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Bigo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>